# eromance

backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 066c85ff0d14_initial_migration_2.py  15b2b601a4e5_auth_session.py  1d7ffe4ae2fa_update_session_user_conn.py  99355d30ae64_table_name_changes.py  af65f8122a88_auth.py  b103e14b39dd_back_populate_commentts.py  c27fe5460f87_add_comments_and_connect_users_and_posts.py  d22831bb6ee0_initial_migration.py  e4df0c330215_change_dt_to_int.py
backend/app/: auth.py  database.py  main.py  settings.py  utils.py
backend/app/models/: __init__.py  comment.py  post.py  session.py  user.py
backend/app/routers/: auth.py  comments.py  posts.py
backend/app/schemas/: comment.py  post.py
